# glitter2

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
example/01_single_injection/: a.glitter  b.glitter
example/02_multiple_injection/: a.glitter  b.glitter
example/03_local/: a.glitter  b.glitter  c.glitter
example/04_quote/: a.glitter  kelko.cv  neghvar.cv
example/05_select/: a.glitter
example/06_load/: a.glitter  b.glitter  c.glitter  d.glitter  e.glitter  l_hierarchy.gloss  l_passthrough.gloss  l_select.gloss  l_simple.gloss
example/07_render/: a.glitter  b.glitter  c.glitter  d.glitter  e.glitter  render_with_own_global.glitter  render_with_parameter.glitter  render_with_select.glitter  render_without_global.glitter
example/08_import/: a.glitter  vals.yaml
example/09_hbf_template/: a.glitter  b.glitter  body.txt  footer.txt  header.txt
example/10_computed_vals/: a.glitter  b.glitter
example/11_execute/: a.glitter  b.glitter  c.glitter  d.glitter
example/11_osm/: meta.yaml  osm.glitter  symbols.map
example/11_osm/area/: farmland.glitter  forest.glitter  group.glitter  meadow.glitter
example/11_osm/public_transportation/: group.glitter  railway.glitter  tramway.glitter
example/11_osm/road/: mainroad.glitter  residential.glitter  service.glitter  (+1 more)
example/x01_osm/: db.yaml  meta.glitter
src/: lib.rs
src/config/: mod.rs  model.rs  reader.rs  yaml_import.rs
src/processing/: context.rs  mod.rs  processor.rs  var_store.rs
src/rendering/: mod.rs  template_rendering.rs  var_rendering.rs
src/valma/: mod.rs  parse.rs
(+18 files in other folders)
